mdapi/objects/Program_Field_Config__mdt/Program_Field_Config__mdt.object-meta.xml
<CustomObject>
    <label>Program Field Config</label>
    <pluralLabel>Program Field Configs</pluralLabel>
</CustomObject>