mdapi/objects/Program_Field_Config__mdt/fields/Program_Config__c.field-meta.xml
<CustomField>
    <fullName>Program_Config__c</fullName>
    <label>Program Config</label>
    <referenceTo>Program_Config__mdt</referenceTo>
    <relationshipLabel>Program Field Configs</relationshipLabel>
    <relationshipName>Program_Field_Configs</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>