mdapi/objects/Program_Field_Config__mdt/fields/Target_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API__c</fullName>
    <label>Target Object API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>