mdapi/objects/Program_Field_Config__mdt/fields/UI_Label__c.field-meta.xml
<CustomField>
    <fullName>UI_Label__c</fullName>
    <label>UI Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>